# hugin_lite

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/foreign/flann/algorithms/: kdtree_index.h
src/hugin_base/: CMakeLists.txt
src/hugin_base/panotools/: PanoToolsInterface.cpp
src/hugin_cpfind/cpfind/: CMakeLists.txt  PanoDetector.cpp  PanoDetectorLogic.cpp  main.cpp
src/hugin_cpfind/localfeatures/: CircularKeyPointDescriptor.cpp
src/libhl/: CMakeLists.txt  FastLibpano13.cpp  FastLibpano13.h  FastMath.cpp  FastMath.h
src/tools/: pto_gen.cpp
